refactor(llecoop): #488 set activity store with ngrx/signals and cleanup the full repo
ISSUES CLOSED: #488

--- a/apps/llecoop/src/app/app.component.html
+++ b/apps/llecoop/src/app/app.component.html
@@ -1,4 +1,4 @@
-@if (isActive()) {
+@if (activityStore.isActive()) {
   <plastik-shared-activity-ui-overlay>
     <mat-progress-spinner
       color="primary"
