--- a/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
+++ b/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
@@ -3,93 +3,101 @@
 @let order = facade.userOrder();
 @let orderStatus = facade.orderStatus();
 
-<div
-  class="flex flex-col flex-wrap justify-center items-center gap-tiny md:flex-row md:justify-between">
-  <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
-    <mat-icon class="text-[40px] size-[40px]">{{ viewConfig?.icon }}</mat-icon>
-    <span>{{ viewConfig?.title | titlecase }}</span>
-  </h2>
+@defer {
+  <div
+    class="flex flex-col flex-wrap justify-center items-center gap-tiny md:flex-row md:justify-between">
+    <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
+      <mat-icon class="text-[40px] size-[40px]">{{ viewConfig?.icon }}</mat-icon>
+      <span>{{ viewConfig?.title | titlecase }}</span>
+    </h2>
 
-  <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-tiny">
-    <button type="button" mat-stroked-button [routerLink]="['/comandes', 'totes']">
-      <mat-icon>arrow_back</mat-icon> Tornar al llistat
-    </button>
+    <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-tiny">
+      <button type="button" mat-stroked-button [routerLink]="['/comandes', 'totes']">
+        <mat-icon>arrow_back</mat-icon> Tornar al llistat
+      </button>
+    </div>
   </div>
-</div>
+}
 
 <div class="flex flex-col justify-between gap-md pt-lg">
-  <section
-    class="rounded-lg shadow-sm p-md mb-md"
-    [attr.aria-label]="'Resum de la comanda ' + order?.name">
-    <article>
-      <h3 class="text-md text-balance">
-        {{ order?.name }}
-      </h3>
+  @defer {
+    <section
+      class="rounded-lg shadow-sm p-md mb-md"
+      [attr.aria-label]="'Resum de la comanda ' + order?.name">
+      <article>
+        <h3 class="text-md text-balance">
+          {{ order?.name }}
+        </h3>
 
-      @if (orderStatus) {
-        <plastik-ui-order-status-chip
-          [iconClass]="orderStatus.class || ''"
-          [icon]="orderStatus.icon || ''"
-          [label]="orderStatus.label || ''">
-        </plastik-ui-order-status-chip>
-      }
-      <dl class="space-y-2">
-        <div class="flex items-center gap-tiny">
-          <dt>Id:</dt>
-          <dd>{{ order?.id }}</dd>
-        </div>
-        <div class="flex items-center gap-tiny">
-          <dt>Nom:</dt>
-          <dd>{{ order?.name }}</dd>
-        </div>
-        <div class="flex items-center gap-tiny">
-          <dt>Usuari:</dt>
-          <dd>{{ order?.userName }}</dd>
-        </div>
-        @if (order?.address) {
+        @if (orderStatus) {
+          <plastik-ui-order-status-chip
+            [iconClass]="orderStatus.class || ''"
+            [icon]="orderStatus.icon || ''"
+            [label]="orderStatus.label || ''">
+          </plastik-ui-order-status-chip>
+        }
+        <dl class="space-y-2">
           <div class="flex items-center gap-tiny">
-            <dt>Adreça:</dt>
+            <dt>Id:</dt>
+            <dd>{{ order?.id }}</dd>
+          </div>
+          <div class="flex items-center gap-tiny">
+            <dt>Nom:</dt>
+            <dd>{{ order?.name }}</dd>
+          </div>
+          <div class="flex items-center gap-tiny">
+            <dt>Usuari:</dt>
+            <dd>{{ order?.userName }}</dd>
+          </div>
+          @if (order?.address) {
+            <div class="flex items-center gap-tiny">
+              <dt>Adreça:</dt>
+              <dd>
+                <address class="not-italic">
+                  {{ order?.address }}
+                </address>
+              </dd>
+            </div>
+          }
+          <div class="flex items-center gap-tiny">
+            <dt>Email:</dt>
             <dd>
-              <address class="not-italic">
-                {{ order?.address }}
-              </address>
+              {{ order?.userEmail }}
             </dd>
           </div>
-        }
-        <div class="flex items-center gap-tiny">
-          <dt>Email:</dt>
-          <dd>
-            {{ order?.userEmail }}
-          </dd>
+        </dl>
+      </article>
+    </section>
+  }
+
+  @defer {
+    <plastik-shared-table
+      [data]="tableDefinition.getData?.() || []"
+      [caption]="tableDefinition.caption || ''"
+      [columnProperties]="tableDefinition.columnProperties() || []"
+      [resultsLength]="tableDefinition?.count() || 0"
+      [noPagination]="tableDefinition.noPagination || false">
+    </plastik-shared-table>
+  }
+
+  @defer {
+    <section
+      class="flex flex-col self-end rounded-lg shadow-sm p-sm min-w-third gap-tiny"
+      aria-label="Total de la compra">
+      <dl class="divide-y divide-secondary-dark">
+        <div class="flex flex-row justify-between items-center p-tiny">
+          <dt class="text-md">Total productes</dt>
+          <dd class="font-medium">{{ order?.totalPrice | currency }}</dd>
+        </div>
+        <div class="flex flex-row justify-between items-center p-tiny">
+          <dt class="text-md">Transport</dt>
+          <dd class="font-medium">{{ order?.deliveryPrice | currency }}</dd>
+        </div>
+        <div class="flex flex-row justify-between items-center p-tiny">
+          <dt class="text-lg font-semibold">Total</dt>
+          <dd class="text-lg font-bold">{{ order?.totalPrice | currency }}</dd>
         </div>
       </dl>
-    </article>
-  </section>
-
-  <plastik-shared-table
-    [data]="tableDefinition.getData?.() || []"
-    [caption]="tableDefinition.caption || ''"
-    [columnProperties]="tableDefinition.columnProperties() || []"
-    [resultsLength]="tableDefinition?.count() || 0"
-    [noPagination]="tableDefinition.noPagination || false">
-  </plastik-shared-table>
-
-  <section
-    class="flex flex-col self-end rounded-lg shadow-sm p-sm min-w-third gap-tiny"
-    aria-label="Total de la compra">
-    <dl class="divide-y divide-secondary-dark">
-      <div class="flex flex-row justify-between items-center p-tiny">
-        <dt class="text-md">Total productes</dt>
-        <dd class="font-medium">{{ order?.totalPrice | currency }}</dd>
-      </div>
-      <div class="flex flex-row justify-between items-center p-tiny">
-        <dt class="text-md">Transport</dt>
-        <dd class="font-medium">{{ order?.deliveryPrice | currency }}</dd>
-      </div>
-      <div class="flex flex-row justify-between items-center p-tiny">
-        <dt class="text-lg font-semibold">Total</dt>
-        <dd class="text-lg font-bold">{{ order?.totalPrice | currency }}</dd>
-      </div>
-    </dl>
-  </section>
+    </section>
+  }
 </div>
