--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -1,4 +1,3 @@
-@let isActive = (isActive$ | ngrxPush) || false;
 @let sidenavOpened = (sidenavOpened$ | ngrxPush) || false;
 @let isMobile = (isMobile$ | ngrxPush) || false;
 @let headerMenu = headerConfig.menu;
@@ -6,7 +5,7 @@
 @let sidenavPosition = headerConfig.sidenavPosition || 'start';
 @let headerWidgetsPosition = headerWidgetsConfig?.position;
 
-@if (isActive) {
+@if (isActive()) {
   <plastik-shared-activity-ui-overlay>
     <div class="spinner-container">
       <div class="lds-ripple">
