--- a/libs/llecoop/cms-layout/src/lib/cms-layout/cms-layout.component.html
+++ b/libs/llecoop/cms-layout/src/lib/cms-layout/cms-layout.component.html
@@ -2,7 +2,9 @@
 @let extendedTitle = headerConfig.extendedTitle;
 @let headerMenu = headerConfig.menu;
 
-<plastik-skip-link></plastik-skip-link>
+@defer {
+  <plastik-skip-link></plastik-skip-link>
+}
 
 <div class="core-cms-container">
   <plastik-core-cms-layout-ui-header data-test="layout-header">
@@ -43,7 +45,9 @@
     </div>
 
     <div end class="flex items-center gap-tiny">
-      <plastik-llecoop-order-indicator></plastik-llecoop-order-indicator>
+      @defer {
+        <plastik-llecoop-order-indicator></plastik-llecoop-order-indicator>
+      }
 
       <button
         mat-button
