--- a/libs/shared/img-container/ui/src/lib/shared-img-container.component.html
+++ b/libs/shared/img-container/ui/src/lib/shared-img-container.component.html
@@ -1,4 +1,4 @@
-@if (!width() || !height()) {
+@if (!dimensions()) {
   <img
     fill
     class="object-cover rounded-lg"
@@ -6,12 +6,14 @@
     [priority]="lcpImage()"
     [alt]="title()" />
 } @else {
+  @let width = dimensions()?.width;
+  @let height = dimensions()?.height;
   <img
     class="object-cover rounded-lg"
     [ngSrc]="src() || ''"
-    [width]="width() || height()"
-    [height]="height() || width()"
+    [width]="width"
+    [height]="height"
     [priority]="lcpImage()"
     [alt]="title()"
-    [loaderParams]="{ width: width(), height: height() || width(), quality: quality() }" />
+    [loaderParams]="{ width, height, quality: quality() }" />
 }
