--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -1,6 +1,9 @@
 @let viewConfig = facade.viewConfig();
 @let viewExtraActions = facade.viewExtraActions?.() || [];
 @let formConfig = facade.formConfig;
+@let getFormConfig = formConfig.getConfig();
+@let getFormFieldFullWidth = formConfig.getFormFullWidth;
+@let getSubmitFormConfig = formConfig.getSubmitFormConfig;
 
 <div
   class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
@@ -46,10 +49,10 @@
   @defer {
     <plastik-shared-form-feature
       class="block w-full"
-      [ngClass]="{ '@lg:w-10/12 @xxl:w-1/2': !formConfig.getFormFullWidth }"
-      [fields]="formConfig.getConfig() || []"
+      [ngClass]="{ '@lg:w-10/12 @xxl:w-1/2': !getFormFieldFullWidth }"
+      [fields]="getFormConfig"
       [model]="facade.model?.() || {}"
-      [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.()) || {}"
+      [submitConfig]="getSubmitFormConfig?.() || {}"
       (temporaryChangeEvent)="facade.onFormTemporaryChange?.($event)"
       (pendingChangesEvent)="pendingChanges.set($event)"
       (changeEvent)="facade.onSubmit($event); pendingChanges.set(false)">
