feat(llecoop): #658 add the main view for public products store

--- a/libs/llecoop/category/ui/category-name-cell/src/lib/ui-category-name-cell.component.html
+++ b/libs/llecoop/category/ui/category-name-cell/src/lib/ui-category-name-cell.component.html
@@ -1,8 +1,6 @@
 @if (category(); as category) {
   <p class="grid grid-cols-[15px_1fr] items-center justify-center gap-tiny">
-    <span
-      class="rounded-full size-sub"
-      [ngStyle]="{ 'background-color': category.color ?? 'black' }"></span>
+    <span class="rounded-full size-sub" [ngStyle]="{ 'background-color': category.color }"></span>
     @if (withLink()) {
       <a [ngClass]="nameStyle()" [routerLink]="[category.id]">{{ category.name }}</a>
     } @else {
