--- a/libs/llecoop/user-order/product-list/feature/src/lib/llecoop-user-order-product-list-feature/llecoop-user-order-product-list-feature.component.html
+++ b/libs/llecoop/user-order/product-list/feature/src/lib/llecoop-user-order-product-list-feature/llecoop-user-order-product-list-feature.component.html
@@ -1,16 +1,12 @@
 <div class="flex flex-col flex-wrap justify-center items-center gap-sm mb-md">
-  @defer {
-    <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
-      Benvigut/da a la botiga d'El Llevat!
-    </h2>
-    <p class="text-center text-md">Descobreix productes ecològics, frescos i de proximitat.</p>
-  }
+  <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
+    Benvigut/da a la botiga d'El Llevat!
+  </h2>
+  <p class="text-center text-md">Descobreix productes ecològics, frescos i de proximitat.</p>
 </div>
 
 <div class="flex flex-col flex-wrap justify-center items-center gap-sm mb-md">
-  @defer {
-    <h3>Els nostres productes</h3>
-  }
+  <h3>Els nostres productes</h3>
 
   @defer {
     <div class="flex flex-wrap justify-center items-center max-w-fit gap-md">
@@ -21,6 +17,17 @@
           (addToCart)="facade.addToCart($event)"
           (viewDetails)="facade.viewDetails($event)" />
       }
+    </div>
+
+    <div
+      class="flex justify-center items-center w-full border-t border-solid border-gray-10 mt-md py-md">
+      <mat-paginator
+        [length]="facade.count()"
+        [pageSize]="facade.pagination().pageSize"
+        [pageIndex]="facade.pagination().pageIndex"
+        [pageSizeOptions]="facade.pageSizeOptions()"
+        (page)="facade.onTablePagination($event)">
+      </mat-paginator>
     </div>
   }
 </div>
