--- a/libs/llecoop/user-order/ui/user-order-product-card/src/lib/ui-user-order-product-card.component.html
+++ b/libs/llecoop/user-order/ui/user-order-product-card/src/lib/ui-user-order-product-card.component.html
@@ -10,7 +10,8 @@
   <div class="flex relative justify-center items-center bg-white">
     @if (product().imgUrl; as imgUrl) {
       <plastik-shared-img-container
-        mat-card-image
+        mat-
+        card-image
         [src]="imgUrl"
         [title]="product().name"
         [dimensions]="{ width: 250, height: 250 }"
