--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -5,7 +5,7 @@
 
 <div class="flex flex-row flex-wrap justify-center items-center gap-sm sm:justify-between">
   @defer {
-    <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
+    <h2 class="flex content-center items-center h4 gap-sub">
       <mat-icon class="text-[40px] size-[40px]">{{ viewConfig?.icon }}</mat-icon>
       <span>{{ viewConfig?.title | titlecase }}</span>
     </h2>
