--- a/libs/llecoop/user-order/product-list/feature/src/lib/llecoop-user-order-product-list-feature/llecoop-user-order-product-list-feature.component.html
+++ b/libs/llecoop/user-order/product-list/feature/src/lib/llecoop-user-order-product-list-feature/llecoop-user-order-product-list-feature.component.html
@@ -1,6 +1,6 @@
 @defer {
   <div class="flex flex-col flex-wrap justify-center items-center gap-sm mb-md">
-    <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
+    <h2 class="flex content-center items-center h4 gap-sub">
       Benvigut/da a la botiga d'El Llevat!
     </h2>
     <p class="text-center text-md">Descobreix productes ecològics, frescos i de proximitat.</p>
