--- a/libs/shared/auth/feature/src/lib/auth-feature/auth-feature.component.html
+++ b/libs/shared/auth/feature/src/lib/auth-feature/auth-feature.component.html
@@ -39,7 +39,7 @@
         </mat-card-content>
 
         <mat-card-footer
-          class="w-full text-center border-t-2 text-[12px] text-balance bg-gray-70 text-white py-sub border-spacing-sm border-t-primary-light">
+          class="w-full text-center border-t-2 text-[12px] text-balance bg-gray-70 text-white py-sub border-spacing-sm border-t-secondary">
           <a
             class="hover:text-gray-10 hover:decoration-gray-10"
             target="_self"
