--- a/libs/llecoop/order-list/feature/order-list-user-order/src/lib/order-list-user-order-feature-list.component.html
+++ b/libs/llecoop/order-list/feature/order-list-user-order/src/lib/order-list-user-order-feature-list.component.html
@@ -4,17 +4,13 @@
 <div
   class="flex flex-col flex-wrap justify-center items-center mb-4 gap-sm md:flex-row md:justify-between">
   @defer {
-    <h2 class="flex content-center items-center h4 gap-sub text-primary-dark">
+    <h2 class="flex content-center items-center h4 gap-sub">
       <mat-icon class="text-[40px] size-[40px]">{{ viewConfig?.icon }}</mat-icon>
       <span>{{ viewConfig?.title | titlecase }}</span>
     </h2>
 
     <div class="flex flex-row justify-end items-center gap-sm">
-      <button
-        type="button"
-        mat-stroked-button
-        color="primary"
-        [routerLink]="['/comandes', 'setmanals']">
+      <button type="button" mat-stroked-button [routerLink]="['/comandes', 'setmanals']">
         <mat-icon>date_range</mat-icon> Veure ell llistat de comandes per setmanes
       </button>
     </div>
