--- a/libs/llecoop/user-order/cart/ui/mini-cart/src/lib/user-order-mini-cart/user-order-mini-cart.scss
+++ b/libs/llecoop/user-order/cart/ui/mini-cart/src/lib/user-order-mini-cart/user-order-mini-cart.scss
@@ -36,5 +36,9 @@
       padding-right: 0;
       padding-left: 0;
     }
+    .mdc-list-item--with-leading-avatar.mdc-list-item {
+      padding-left: 0;
+      padding-right: 0;
+    }
   }
 }
